一覧を変更

--- a/submit.html
+++ b/submit.html
@@ -30,8 +30,8 @@
     <form>
         <select class="compiler">
             <option value="pypy-3.7-v7.3.9">Python:pypy-3.7-v7.3.9</option>
-            <option value="gcc-13.2.0-c">C++:gcc-13.2.0-c</option>
-            <option value="rust-1.81.0">Rust:rust-1.81.0</option>
+            <option value="gcc-head">C++:gcc-head</option>
+            <option value="rust-1.82.0">Rust:rust-1.82.0</option>
         </select>
         <label>
             コード:
