--- a/submit.html
+++ b/submit.html
@@ -6,38 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>提出</title>
 
 </head>
 
 <body>
-    <h1>提出</h1>
-    <!--・言語
+    <header>
+        <img src="img/logo.svg" alt="MaiCoder">
+        <div>
+            <a href="code-test.html">コードテスト</a>
+            <a href="submit.html">提出</a>
+        </div>
+    </header>
+    <main>
+        <h1>提出</h1>
+        <!--・言語
 ・コード
 ・入力-->
-    <div class="form-container">
-        <form>
-            <label>
-                言語:
-                <select class="compiler">
-                    <option value="pypy-3.7-v7.3.9">Python:pypy-3.7-v7.3.9</option>
-                    <option value="gcc-head">C++:gcc-head</option>
-                    <option value="rust-1.82.0">Rust:rust-1.82.0</option>
-                </select>
-            </label>
-            <label>
-                コード:
-                <textarea name="" class="code"></textarea>
-            </label>
-            <label>
-                標準入力:
-                <textarea class="input"></textarea>
-            </label>
-            <button type="button" onclick="test()">提出</button>
-        </form>
-        <code></code>
-    </div>
+        <div class="form-container">
+            <form>
+                <label>
+                    言語:
+                    <select class="compiler">
+                        <option value="pypy-3.7-v7.3.9">Python:pypy-3.7-v7.3.9</option>
+                        <option value="gcc-head">C++:gcc-head</option>
+                        <option value="rust-1.82.0">Rust:rust-1.82.0</option>
+                    </select>
+                </label>
+                <label>
+                    コード:
+                    <textarea name="" class="code monospace"></textarea>
+                </label>
+                <label>
+                    標準入力:
+                    <textarea class="input monospace"></textarea>
+                </label>
+                <button type="button" onclick="test()" class="primary">提出</button>
+            </form>
+            <code></code>
+        </div>
+    </main>
     <script>
         function test() {
             let $compiler = document.querySelector("select.compiler")
