--- a/web/html/submit.html
+++ b/web/html/submit.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <title>コードテスト</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.36.0/ace.js"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>提出</title>
-
 </head>
 
 <body>
@@ -22,30 +20,37 @@
         </div>
     </header>
     <main>
-        <h1>提出</h1>
-        <!--・言語
-・コード
-・入力-->
+        <h1>コードテスト</h1>
         <div class="form-container">
             <form>
                 <label>
                     言語:
-                    <select class="compiler">
-                        <option value="pypy-3.7-v7.3.9">Python:pypy-3.7-v7.3.9</option>
-                        <option value="gcc-head">C++:gcc-head</option>
+                    <select class="compiler" onchange="compiler_change()">
+                        <option value="python">Python:pypy-3.7-v7.3.9</option>
+                        <option value="c++">C++:gcc-head</option>
+                        <option value="rust">Rust:rust-1.82.0</option>
                     </select>
                 </label>
+
                 <label>
-                    コード:
-                    <textarea name="" class="code monospace"></textarea>
+                    コードテスト:
+                    <div id="editor"></div>
                 </label>
+
                 <label>
                     標準入力:
                     <textarea class="input monospace"></textarea>
                 </label>
-                <button type="button" onclick="test()" class="primary">提出</button>
+                <button type="button" class="primary" onclick="go()">実行</button>
             </form>
-            <code></code>
+            <label>
+                <p>応答時間:<span class="speed"></span></p>
+                <br>
+                標準出力:
+                <div class="output">
+                    <code></code>
+                </div>
+            </label>
         </div>
     </main>
     <script src="js/submit.js"></script>
