--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -41,7 +41,10 @@
                     標準入力:
                     <textarea class="input monospace"></textarea>
                 </label>
-                <button type="button" class="primary" onclick="go()">実行</button>
+                <button type="button" class="primary go" onclick="go()">
+                    <p>実行<span>中...</span></p>
+                    <div class="loader"></div>
+                </button>
             </form>
             <label>
                 <p>応答時間:<span class="speed"></span></p>
@@ -53,51 +56,7 @@
             </label>
         </div>
     </main>
-    <script>
-        const editor = ace.edit("editor", {
-            fontSize: "15px"
-        })
-
-        async function getData(data) {
-            const url = "https://api.maicoder.f5.si/judge/test";
-            try {
-                const response = await fetch(url, {
-                    method: "POST",
-                    body: JSON.stringify(data),
-                });
-                if (!response.ok) {
-                    throw new Error(`レスポンスステータス: ${response.status}`);
-                }
-                const json = await response.json();
-                return json
-            } catch (error) {
-                return error
-            }
-        }
-
-        async function go() {
-            let data = {
-                compiler: 'pypy-3.7-v7.3.9', //一旦
-                code: editor.getValue(),
-                stdin: document.querySelector("textarea.input").value
-            }
-            const response = await getData(data)
-
-            let $output = document.querySelector(".output code")
-            let $speed = document.querySelector("span.speed")
-
-            $output.innerHTML = response.message.program_message
-            $speed.innerHTML = Math.round(response.speed * 100) + ' ms'
-        }
-
-        function compiler_change() {
-            let compiler = document.querySelector("select.compiler").value
-            editor.session.setMode(`ace/mode/${compiler}`);
-        }
-
-
-        compiler_change()
-    </script>
+    <script src="js/submit.js"></script>
 </body>
 
 </html>
