--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -26,9 +26,8 @@
                 <label>
                     言語:
                     <select class="compiler" onchange="compiler_change()">
-                        <option value="python">Python:pypy-3.7-v7.3.9</option>
-                        <option value="c++">C++:gcc-head</option>
-                        <option value="rust">Rust:rust-1.82.0</option>
+                        <option value="pypy-3.7-v7.3.9">Python:pypy-3.7-v7.3.9</option>
+                        <option value="gcc-head">C++:gcc-head</option>
                     </select>
                 </label>
 
