言語の選択機能修正

--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -16,7 +16,6 @@
         <img src="img/logo.svg" alt="MaiCoder">
         <div>
             <a href="code-test.html">コードテスト</a>
-            <a href="submit.html">提出</a>
         </div>
     </header>
     <main>
@@ -26,8 +25,8 @@
                 <label>
                     言語:
                     <select class="compiler" onchange="compiler_change()">
-                        <option value="pypy-3.7-v7.3.9">Python: pypy-3.7-v7.3.9</option>
-                        <option value="gcc-head">C++: gcc-head</option>
+                        <option value="python,pypy-3.7-v7.3.9">Python: pypy-3.7-v7.3.9</option>
+                        <option value="c++,gcc-head">C++: gcc-head</option>
                     </select>
                 </label>
 
