--- a/web/html/problem.html
+++ b/web/html/problem.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>コードテスト</title>
+    <title>mondai</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.36.0/ace.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
@@ -19,7 +20,9 @@
         </div>
     </header>
     <main>
-        <h1>コードテスト</h1>
+        <h1>問題文</h1>
+        <div id="content"></div>
+        <h1>提出</h1>
         <div class="form-container">
             <form>
                 <label>
@@ -55,7 +58,13 @@
         </div>
     </main>
     <script src="js/submit.js"></script>
-
+    <script>
+        const markdown = "# 問題文\n整数 A,B が与えられるので、 A+B の値を答えてください。\n但し、この問題は N 択問題であり、 i 番の選択肢は C \niです。\n正解となる 選択肢の番号 を出力してください。\n\n# 制約\n- 入力は全て整数\n- 1≤N≤300\n \n # 入力\n 入力は以下の形式で標準入力から与えられる。\n ```\n N A B\n C1 C2 ... CN\n ```\n \n # 出力\n答えを整数として出力せよ。\n\n# 入力例1\n```\n3 125 175\n200 300 400\n```\n# 出力例1\n```\n2\n```\n125+175=300 です。\n1 番の選択肢は 200  2 番の選択肢は 300 、3 番の選択肢は 400です。\nよって正解となる選択肢の番号は 2 番であり、これを出力します。" 
+        function preview() {
+            document.getElementById('content').innerHTML = marked.parse(markdown);
+        }
+        preview() 
+    </script>
 </body>
 
 </html>
