スタイルを変更

--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -18,8 +18,11 @@
             <a href="code-test.html">コードテスト</a>
         </div>
     </header>
-    <main>
+    <div class="title">
         <h1>コードテスト</h1>
+        <p>ここで動作を確認できます</p>
+    </div>
+    <main>
         <div class="form-container">
             <form>
                 <label>
