--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -33,8 +33,11 @@
             <a href="code-test.html">コードテスト</a>
         </div>
     </header>
-    <main>
+    <div class="title">
         <h1>作問エディタ</h1>
+        <p>問題を作成できます</p>
+    </div>
+    <main>
         <section class="editor-container">
             <div id="editor" onkeyup="preview()"></div>
             <div id="content"></div>
