トップへのリンクを追加

--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -13,7 +13,9 @@
 
 <body>
     <header>
-        <img src="img/logo.svg" alt="MaiCoder">
+        <a href="./">
+            <img src="img/logo.svg" alt="MaiCoder">
+        </a>
         <div>
             <a href="code-test.html">コードテスト</a>
         </div>
