--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -28,7 +28,9 @@
         </tr>
     </template>
     <header>
-        <img src="img/logo.svg" alt="MaiCoder">
+        <a href="./">
+            <img src="img/logo.svg" alt="MaiCoder">
+        </a>
         <div>
             <a href="code-test.html">コードテスト</a>
         </div>
