問題管理をいい感じに

--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -50,7 +50,7 @@
                 <option value="easy">Easy</option>
                 <option value="normal">Normal</option>
                 <option value="hard">Hard</option>
-                <option value="insine">Insane</option>
+                <option value="insane">Insane</option>
             </select>
         </section>
         <section class="editor-container">
