コンテストに合わせて公開オプションを作成

--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -86,6 +86,10 @@
                 <button onclick="add_test_case()">テストケースを追加</button>
             </div>
         </section>
+        <section>
+            <label>コンテストに合わせて公開:</label>
+            <input type="checkbox" name="" id="">
+        </section>
         <button class="primary" onclick="post()">送信</button>
     </main>
     <script>
