一回プッシュ

--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -87,8 +87,8 @@
             </div>
         </section>
         <section>
-            <label>コンテストに合わせて公開:</label>
-            <input type="checkbox" name="" id="">
+            <label>今すぐ公開:</label>
+            <input type="checkbox" name="" id="" checked>
         </section>
         <button class="primary" onclick="post()">送信</button>
     </main>
