コンテストで、問題ページを自動生成

--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -89,7 +89,8 @@
         <section>
             <label>今すぐ公開:</label>
             <input type="checkbox" name="" id="" checked>
-
+        </section>
+        <section>
             <!-- 今すぐ公開しないときだけ表示するようにする/現在時刻より前は設定できないようにする -->
             <!-- コンテストとの紐づけはここではしない -->
             <p><label>公開日時:</label></p>
