--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .form-container {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -36,7 +41,6 @@
                 </label>
 
                 <label>
-                    コードテスト:
                     <div id="editor"></div>
                 </label>
 
