--- a/web/html/login/signup.html
+++ b/web/html/login/signup.html
@@ -47,7 +47,7 @@
             if (document.querySelector("input.password").value == document.querySelector("input.re-password").value) {
                 let user_data = {
                     user: document.querySelector("input.user").value,
-                    password: document.querySelector("input.password").value
+                    pass: document.querySelector("input.password").value
                 };
                 try {
                     let response = await fetch("https://api.maicoder.f5.si/users/register", {
