--- a/web/html/login/login.html
+++ b/web/html/login/login.html
@@ -55,6 +55,7 @@
                 if (response.status == 200) {
                     let data = await response.json();
                     console.log(data);
+                    localStorage.setItem("jwt_token", data.access_token);
                 }
             } catch (error) {
                 console.error("エラーが発生しました:", error);
