ホームの更新

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -17,13 +17,20 @@
     <header>
         <img src="img/logo.svg" alt="MaiCoder">
         <div>
-            <a href="code-test.html">コードテスト</a>
             <a href="editor.html">作問エディタ</a>
+            <a href="./login/signup.html">新規登録</a>
+            <a href="./login/login.html" class="primary">ログイン</a>
         </div>
     </header>
     <section class="top">
+        <div class="wrap">
         <h1>Welcome To MaiCoder</h1>
-        <h2>解けた！を小規模に届けたい。</h2>
+        <h2>MaiCoderは学生を対象とする競技プログラミングサイトです。<br>作問・コンテストを通して仲間と競い合うことができます。</h2>
+        </div>
+        <div class="action">
+            <button>コンテスト</button>
+            <button>問題集</button>
+        </div>
     </section>
     <section class="description">
     </section>
