--- a/web/html/contest-editor.html
+++ b/web/html/contest-editor.html
@@ -43,16 +43,16 @@
     </div>
     <main style="align-items: baseline;">
         <section>
-            <label>コンテストタイトル:</label>
-            <input type="text" style="max-width: 370px; width: 100%;" class="contest-title">
-        </section>
-        <section>
-            <label>コンテストの詳細:</label>
-            <textarea class="content"></textarea>
+            <label>タイトル:</label>
+            <input type="text" style="max-width: 370px; width: 100%;" class="contest-title" placeholder="mwc001等...">
         </section>
         <section>
             <label>開始日時:</label>
             <input type="datetime-local">
+        </section>
+        <section>
+            <label>コンテストの詳細:</label>
+            <textarea class="content" style="width: 100%; height: 100px;"></textarea>
         </section>
         <section>
             <label>問題:</label>
@@ -115,6 +115,7 @@
                     },
                     body: JSON.stringify(payload)
                 });
+                console.log(response)
 
             } catch (error) {
                 console.error("Error:", error);
