--- a/web/html/editor.html
+++ b/web/html/editor.html
@@ -32,7 +32,15 @@
             <img src="img/logo.svg" alt="MaiCoder">
         </a>
         <div>
-            <a href="code-test.html">コードテスト</a>
+            <a href="editor.html">作問エディタ</a>
+            <div class="div">
+                <a href="./login/signup.html">新規登録</a>
+                <a href="./login/login.html" class="primary">ログイン</a>
+            </div>
+            <div class="logined" style="display: none;">
+                <img src="./img/user.svg" alt="">
+                <p>{user名}</p>
+            </div>
         </div>
     </header>
     <div class="title">
