ファイル構造を変更

--- a/web/html/code-test.html
+++ b/web/html/code-test.html
@@ -87,7 +87,7 @@
             </label>
         </div>
     </main>
-    <script src="js/submit.js"></script>
+    <script src="js/common.js"></script>
 
 </body>
 
