--- a/web/html/login/login.html
+++ b/web/html/login/login.html
@@ -16,11 +16,19 @@
 
 <body>
     <header>
-        <a href="/">
-            <img src="../../img/logo.svg" alt="MaiCoder">
+        <a href="./">
+            <img src="../img/logo.svg" alt="MaiCoder">
         </a>
         <div>
-            <a href="../../code-test.html">コードテスト</a>
+            <a href="../editor.html">作問エディタ</a>
+            <div class="div">
+                <a href="./signup.html">新規登録</a>
+                <a href="./login.html" class="primary">ログイン</a>
+            </div>
+            <div class="logined" style="display: none;">
+                <img src="../img/user.svg" alt="">
+                <p>{user名}</p>
+            </div>
         </div>
     </header>
     <div class="panel">
