--- a/web/html/login/login.html
+++ b/web/html/login/login.html
@@ -13,21 +13,46 @@
     <style>
     </style>
 </head>
+<script>
+    function menu_toggle() {
+        const menu = document.querySelector('.logined_menu');
+        menu.style.display = menu.style.display === 'none' || menu.style.display === '' ? 'flex' : 'none';
 
+        if (menu.style.display === 'flex') {
+            document.addEventListener('click', closeMenuOnClickOutside);
+        }
+    }
+
+    function closeMenuOnClickOutside(event) {
+        const menu = document.querySelector('.logined_menu');
+        const button = document.querySelector('.logined');
+        if (!menu.contains(event.target) && !button.contains(event.target)) {
+            menu.style.display = 'none';
+            document.removeEventListener('click', closeMenuOnClickOutside);
+        }
+    }
+</script>
 <body>
     <header>
-        <a href="./">
+        <a href="../index.html">
             <img src="../img/logo.svg" alt="MaiCoder">
         </a>
         <div>
             <a href="../editor.html">作問エディタ</a>
+            <a href="../contests.html">コンテスト</a>
+            <a href="../problems.html">問題集</a>
+            <div class="border"></div>
             <div class="div">
                 <a href="./signup.html">新規登録</a>
                 <a href="./login.html" class="primary">ログイン</a>
             </div>
-            <div class="logined" style="display: none;">
+            <button class="logined" style="display: none; padding: 4px; border: none;" onclick="menu_toggle()">
                 <img src="../img/user.svg" alt="">
-                <p>{user名}</p>
+                <p></p>
+            </button>
+            <div class="logined_menu">
+                <a href="">プロフィール</a>
+                <a href="">ログアウト</a>
             </div>
         </div>
     </header>
@@ -46,6 +71,7 @@
             <button class="primary" type="button" onclick="login()">ログイン</button>
         </form>
     </div>
+    <script src="../js/user.js"></script>
     <script>
         async function login() {
             let user_data = {
