--- a/web/html/login/signup.html
+++ b/web/html/login/signup.html
@@ -16,18 +16,25 @@
 
 <body>
     <header>
-        <a href="./">
+        <a href="../index.html">
             <img src="../img/logo.svg" alt="MaiCoder">
         </a>
         <div>
             <a href="../editor.html">作問エディタ</a>
+            <a href="../contests.html">コンテスト</a>
+            <a href="../problems.html">問題集</a>
+            <div class="border"></div>
             <div class="div">
                 <a href="./signup.html">新規登録</a>
                 <a href="./login.html" class="primary">ログイン</a>
             </div>
-            <div class="logined" style="display: none;">
+            <button class="logined" style="display: none; padding: 4px; border: none;" onclick="menu_toggle()">
                 <img src="../img/user.svg" alt="">
-                <p>{user名}</p>
+                <p></p>
+            </button>
+            <div class="logined_menu">
+                <a href="">プロフィール</a>
+                <a href="">ログアウト</a>
             </div>
         </div>
     </header>
@@ -50,6 +57,7 @@
             <button class="primary" onclick="signup()" type="button">アカウントを作成</button>
         </form>
     </div>
+    <script src="../js/user.js"></script>
     <script>
         async function signup() {
             if (document.querySelector("input.password").value == document.querySelector("input.re-password").value) {
