--- a/web/html/index.html
+++ b/web/html/index.html
@@ -33,29 +33,6 @@
 </head>
 
 <body>
-    <header>
-        <a href="./index.html">
-            <img src="./img/logo.svg" alt="MaiCoder">
-        </a>
-        <div>
-            <a href="./editor.html">作問エディタ</a>
-            <a href="./contests.html">コンテスト</a>
-            <a href="./problems.html">問題集</a>
-            <div class="border"></div>
-            <div class="div">
-                <a href="./login/signup.html">新規登録</a>
-                <a href="./login/login.html" class="primary">ログイン</a>
-            </div>
-            <button class="logined" style="display: none; padding: 4px; border: none;" onclick="menu_toggle()">
-                <img src="./img/user.svg" alt="">
-                <p></p>
-            </button>
-            <div class="logined_menu">
-                <a href="">プロフィール</a>
-                <a href="">ログアウト</a>
-            </div>
-        </div>
-    </header>
     <section class="top">
         <div class="wrap">
             <h1>解けた! を小規模に届けたい</h1>
@@ -69,6 +46,7 @@
     <section class="description">
     </section>
     <script src="./js/user.js"></script>
+    <script src="./js/common.js"></script>
 </body>
 
 </html>
