--- a/web/html/index.html
+++ b/web/html/index.html
@@ -21,13 +21,14 @@
             text-align: center;
         }
 
-        .button:hover {
-
-        }
-
         .button.primary {
             background: #222;
             color: #fff;
+        }
+
+        h1 {
+            font-size: 46px;
+            font-weight: 500;
         }
     </style>
 </head>
@@ -35,7 +36,7 @@
 <body>
     <section class="top">
         <div class="wrap">
-            <h1>解けた! を小規模に届けたい</h1>
+            <h1>"解けた!" を<br>小規模に届けたい</h1>
             <h2>MaiCoderは学生を対象とする競技プログラミングサイトです。<br>作問・コンテストを通して仲間と競い合うことができます。</h2>
         </div>
         <div class="action">
