--- a/web/html/login/login.html
+++ b/web/html/login/login.html
@@ -14,29 +14,6 @@
     </style>
 </head>
 <body>
-    <header>
-        <a href="../index.html">
-            <img src="../img/logo.svg" alt="MaiCoder">
-        </a>
-        <div>
-            <a href="../editor.html">作問エディタ</a>
-            <a href="../contests.html">コンテスト</a>
-            <a href="../problems.html">問題集</a>
-            <div class="border"></div>
-            <div class="div">
-                <a href="./signup.html">新規登録</a>
-                <a href="./login.html" class="primary">ログイン</a>
-            </div>
-            <button class="logined" style="display: none; padding: 4px; border: none;" onclick="menu_toggle()">
-                <img src="../img/user.svg" alt="">
-                <p></p>
-            </button>
-            <div class="logined_menu">
-                <a href="">プロフィール</a>
-                <a href="">ログアウト</a>
-            </div>
-        </div>
-    </header>
     <div class="panel">
         <h1>ログイン</h1>
         <form>
@@ -69,8 +46,8 @@
                 });
                 if (response.status == 200) {
                     let data = await response.json();
-                    console.log(data);
                     localStorage.setItem("jwt_token", data.access_token);
+                    window.location.href = '/';
                 }
             } catch (error) {
                 console.error("エラーが発生しました:", error);
